<resources>
    <array name="Banks">
        <item>Enter Bank</item>
        <item>Sampath</item>
        <item>Peoples Bank</item>
    </array>

    <array name="genres">
        <item>Rice and Curry</item>
        <item>Milk Rice</item>
        <item>Fried Rice</item>
        <item>Hoppers</item>
        <item>String Hoppers</item>
        <item>Noodles</item>
        <item>Nasi Goreng</item>
        <item>Special Soup</item>
    </array>

    <array name="type">
        <item>Early Leave</item>
        <item>Late Arrival</item>
    </array>

    <string name="app_name">STAY</string>

    <string name="uName">User Name</string>

    <string name="pwd">Password</string>

    <string name="log">Log In</string>

    <string name="Mfood">Manage Food</string>

    <string name="Mpay">Manage Payment</string>

    <string name="Mleave">Manage Leave</string>

    <string name="Mstu">Manage Boarders</string>

    <string name="Mroom">Manage Rooms</string>

    <string name="Bprofile">My Profile</string>

    <string name="Bfood">Food</string>

    <string name="Bpay">Payment</string>

    <string name="Bleave">Leave</string>

    <string name="title_activity_mng_border">MngBorderActivity</string>

    <string name="tab_text_2">View Boarders</string>

    <string name="tab_text_1">Add Boarder</string>

    <string name="tab_text_3">View Rooms</string>

    <string name="tab_text_4">Add Room</string>

    <string name="bdrName">Boarder Name</string>

    <string name="enrName">Enter Your Name</string>

    <string name="bday">Date Of Birth</string>

    <string name="nic">Nic No</string>

    <string name="phno">Phone No</string>

    <string name="eMail" />

    <string name="email">E-Mail Address</string>

    <string name="adrs">Address</string>

    <string name="gender">Gender</string>

    <string name="room">Room Number</string>

    <string name="male">Male</string>

    <string name="female">Female</string>

    <string name="add">Add Member</string>

    <string name="roomNo">Enter Room Number</string>

    <string name="nicNO">Enter NIC No</string>

    <string name="emiladd">Enter E-Mail Address</string>

    <string name="phoneNumHint">Enter Phone Number</string>

    <string name="enrAdd">Enter Address</string>

    <string name="entrDOB">Enter Date of Birth</string>

    <string name="delete">Delete</string>

    <string name="Bid">Boarder ID</string>

    <string name="update">Update</string>

    <string name="dele">Delete</string>

    <string name="name">Name</string>

    <string name="name1">Milinda Ranawaka</string>

    <string name="bID">B001</string>

    <string name="updateDetail">Update Details</string>

    <string name="btnAdd">Add Order</string>

    <string name="btnView">View Order</string>

    <string name="btnDelete">Delete Order</string>

    <string name="btnUpdate">Update Order</string>

    <string name="tvname">Name</string>

    <string name="tvRno">Room Number</string>

    <string name="listFood">Food List</string>

    <string name="tvFood">Food List</string>

    <string name="btnOrder">Order</string>

    <string name="title_activity_mng_room">MngRoomActivity</string>

    <string name="Rid">Room ID</string>

    <string name="Capacity">Capacity</string>

    <string name="rID1">R001</string>

    <string name="rID2">R002</string>

    <string name="rID3">R003</string>

    <string name="one">1</string>

    <string name="two">2</string>

    <string name="bID2">B002</string>

    <string name="bID3">B003</string>

    <string name="name2">John</string>

    <string name="name3">Josh</string>

    <string name="rNO">Room No</string>

    <string name="etrroomNum">Enter Room Number</string>

    <string name="cpcty">Capacity</string>

    <string name="price">Price</string>

    <string name="enrtCapa">Enter Room Capacity</string>

    <string name="etrprice">Enter Price</string>

    <string name="addroom">Add Room</string>

    <string name="msg1">Your this month room rent is here</string>

    <string name="btn1">Add Payment</string>

    <string name="msg2">Payments</string>

    <string name="mgs3">Your this month room rent payment is here</string>

    <string name="msg4">This Month Rent</string>

    <string name="msg5">View Past Payments</string>

    <string name="btn4">Back</string>

    <string name="msg6">Add Payment</string>

    <string name="input1">Boarder ID</string>

    <string name="input2">Boarder Name</string>

    <string name="input3">NIC</string>

    <string name="input4">Phone</string>

    <string name="input51">Type A</string>

    <string name="input52">Type B</string>

    <string name="input5">Room Type</string>

    <string name="input6">Total Amount</string>

    <string name="input7">Bank</string>

    <string name="btn5">Upload Slip</string>

    <string name="btn6">Submit</string>

    <string name="msg7">Your Submission was successful</string>

    <string name="input8">Date Paid</string>

    <string name="btn8">Update Details</string>

    <string name="msg8">Update Payment</string>

    <string name="btn81">Update</string>

    <string name="msg9">Past Payments</string>

    <string name="msg101">January</string>

    <string name="msg102">12000/=</string>

    <string name="msg103">2019.01.02</string>

    <string name="msg201">February</string>

    <string name="msg202">12000/=</string>

    <string name="msg203">2019.02.03</string>

    <string name="msg301">March</string>

    <string name="msg302">12000/=</string>

    <string name="msg303">2019.03.03</string>

    <string name="msg11">Updated Successfully</string>

    <string name="btn9">Back To Payments</string>

    <string name="msg12">Recieved Payments</string>

    <string name="msg13">Boarder ID: B1234</string>

    <string name="msg14">Payment ID: P1234</string>

    <string name="msg15">Amount : 12000/=</string>

    <string name="msg16">Date : 2019.08.06</string>

    <string name="msg17">Boarder ID: B6789</string>

    <string name="msg18">Payment ID: P6789</string>

    <string name="msg19">Amount : 10000/=</string>

    <string name="msg20">Date : 2019.08.07</string>

    <string name="msg21">Boarder ID: B7890</string>

    <string name="msg22">Payment ID: P7890</string>

    <string name="msg23">Amount : 15000/=</string>

    <string name="msg24">Date : 2019.08.08</string>

    <string name="btn10">Clear</string>

    <string name="req">Early Leave Request</string>

    <string name="view_req">View Request</string>
    <string name="stay">Stay App</string>
    <string name="tvFoodOrder">Foods</string>
    <string name="tvtoday">Today Orders</string>
    <string name="tvDueOrder">Due Orders</string>
    <string name="tvsh">String Hoppers</string>
    <string name="tvfr">Fride Rice</string>
    <string name="btnPast">Past Orders</string>
    <string name="tvss">Special Soup</string>
    <string name="tvFoodOrders">Food Orders</string>
    <string name="ml1">Milinda Ranawaka</string>
    <string name="ml2">Room No : 08</string>
    <string name="ml3">Kavishka Ransara</string>
    <string name="ml4">Room No : 10</string>
    <string name="ml5">Dulashni Amanda</string>
    <string name="ml6">Room No : 20</string>

    <string name="ml7">Ashani Malsha</string>
    <string name="ml8">Room No : 22</string>
    <string name="brdName">Boarder Name</string>
    <string name="room_no">Room No</string>
    <string name="reason">Reason For Leave</string>
    <string name="date">Leave Date</string>
    <string name="time">Leave Time</string>
    <string name="sub_botton">Submit</string>
    <string name="elyLeave">Early Leave</string>
    <string name="lateCome">Late Arrival</string>
    <string name="LateLeaveDate">Late Arival Date</string>
    <string name="arivalTIme">Arival Time</string>
    <string name="reasonTxt">Enter Reason</string>
    <string name="leaveReq">Leave Request</string>
    <string name="idNo1">981065874V</string>
    <string name="phNo1">0776605489</string>
    <string name="rID4">R004</string>
    <string name="rs20000">20000/=</string>
    <string name="rs25000">25000/=</string>
    <string name="early_leave_request">Early Leave Request</string>
    <string name="ac_nonAc">AC / Non-AC</string>
    <string name="ac">AC</string>
    <string name="non_ac">Non-AC</string>
    <string name="upMem">Update Members</string>
    <string name="reason1">Because of Pirith Ceromony in SLIIT</string>
    <string name="trip">Participate to Annual Trip</string>
    <string name="r360">R360</string>
    <string name="b450">B450</string>
    <string name="get">Get together</string>
    <string name="r120">R120</string>
    <string name="b220">B220</string>
    <string name="trip_second">Annual Trip</string>
    <string name="updaRoom">Update Room</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_room_id">Enter Room ID</string>
    <string name="deleteRoom">Delete Room</string>
    <string name="delete_members">Delete Members</string>

    <string name="update_btn">Update</string>

    <string name="delete_btn">DELETE</string>
    <string name="btnpaymentu">Update</string>
    <string name="PayName">Enter Your Name</string>
    <string name="PayUserID">Enter Your ID</string>
    <string name="PayPhone">Enter Your Phone Number</string>
    <string name="PayRoomType">Room Type</string>
    <string name="Payamount">Enter Pay Amount</string>
    <string name="PayDate">Enter Date Paid</string>
    <string name="radio1">Non AC</string>
    <string name="radio2">AC</string>
    <string name="add_Admin">Add Admin</string>
    <string name="view_Admin">View Admin</string>
    <string name="edName">textPersonName</string>
    <string name="edRNo">textPersonRno</string>
    <string name="btnAccept">Accept</string>
    <string name="brnReject">Reject</string>
    <string name="tvOrder">Order</string>

    <string name="manage_Admin">Manage Admin</string>
    <string name="title_activity_manage_admin">ManageAdmin</string>
    <string name="adminName">Admin Name</string>
    <string name="updateAdmin">Update Admin</string>
    <string name="deleteAdmin">Delete Admin</string>
    <string name="welcome">Welcome !!!</string>
    <string name="foodTime">Time</string>
    <string name="recpayheading">Recieved Payments</string>
    <string name="delpayhead">Payment Details</string>
    <string name="delpaytext1">Payment Key:</string>
    <string name="delpaytext2">Boarder ID:</string>
    <string name="delpaytext3">Boarder Name:</string>
    <string name="delpaybtn1">Delete</string>
    <string name="deletePayTxt">Payment Key:</string>
    <string name="deletePaymentTxt3">Border ID:</string>
    <string name="managelisttxt">Border ID</string>
    <string name="delpaystatus">Update Status</string>
    <string name="delpayRTtxt">Room Type</string>
    <string name="delpayAmttxt">Amount</string>
    <string name="delpayBnktxt">Bank</string>
    <string name="delpaystattxt">Status</string>
    <string name="delpaydatetxt">Recieved Date</string>
    <string name="newPwd">New Password</string>
    <string name="confirmPwd">Confirm Password</string>
    <string name="updatePwd">Update Password</string>
    <string name="enterNewPwd">Enter New Password</string>
    <string name="btnTime">Open Time Picker</string>
    <string name="requestedTime">Order Requested Time</string>
    <string name="Pendingpaymsg">Pending Payments</string>
    <string name="acceptedpay">Accepted Payments</string>
    <string name="editRoomBoarder">Edit Room</string>
    <string name="roomNoNew">New Room No</string>

    <string name="Btn_Accept">ACCEPT</string>
    <string name="Btn_Decline">DECLINE</string>

</resources>
